Retire dream-dashboard (#1736)
* Retire dream-dashboard

As announced on Discuss (https://discuss.ocaml.org/t/web-analytics-on-ocaml-org/13188), OCaml.org will be adopting Plausible as a privacy-friendly analytics solution. In anticipation, we retire the WIP dream-dashboard that was exposed at https://ocaml.org/dashboard.

The project lives at https://github.com/JiaeK/dream-dashboard

--- a/data/outreachy.yml
+++ b/data/outreachy.yml
@@ -159,7 +159,7 @@ rounds:
           and get statistics on them. The frontend will use this library to display
           graphs of the metrics, statistics, and other data we want to collect.
         mentee: "Jiae Kam"
-        source: https://github.com/ocaml/ocaml.org
+        source: https://github.com/JiaeK/dream-dashboard
         blog: "https://jiaek.wordpress.com"
         mentors:
          - Thibaut Mattio
